--- a/package.json
+++ b/package.json
@@ -20,19 +20,34 @@
   "author": "Eugen Soloviov",
   "license": "Apache-2.0",
   "dependencies": {
+    "@sentry/node": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.8",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "apollo-server-express": "^2.15.1",
     "@deep-foundation/deeplinks": "0.0.55",
     "@deep-foundation/hasura": "^0.0.15",
     "dotenv": "^16.0.1",
-    "graphql": "^15.8.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "express": "^4.16.4",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "subscriptions-transport-ws": "^0.9.19",
-    "uniqid": "^5.1.0"
-  },
-  "devDependencies": {
+    "uniqid": "^5.1.0",
+    "ts-node": "^8.5.2",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.8.3",
     "mocha": "^6.2.2",
     "ts-mocha": "^6.0.0",
-    "ts-node": "^8.5.2",
     "chai": "^4.2.0"
+  },
+  "devDependencies": {
   }
 }
