--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,9 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "/",
-    "outDir": "build",
-    "rootDir": ".",
-    "noImplicitAny": false,
-    "removeComments": true,
-    "jsx": "react",
     "module": "commonjs",
+    "target": "es5",
+    "lib": ["es2017", "dom"],
     "moduleResolution": "node",
-    "target": "es2015",
-    "lib": [
-      "dom",
-      "es6",
-      "es7",
-      "es2019"
-    ],
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "isolatedModules": true
-  },
-  "exclude": [
-    "./node_modules",
-    "./.next",
-    "./.meteor",
-    "./build"
-  ],
-  "include": [
-    "./"
-  ]
+    "esModuleInterop": true
+  }
 }
