--- a/package.json
+++ b/package.json
@@ -21,12 +21,20 @@
   "license": "Apache-2.0",
   "types": "./src/index.d.ts",
   "dependencies": {
+    "@graphql-tools/schema": "^7.1.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.8",
+    "@types/ws": "^8.2.2",
     "apollo-server": "^3.7.0",
+    "apollo-server-core": "3.6.2",
+    "apollo-server-express": "3.6.2",
     "chai": "^4.2.0",
     "dotenv": "^16.0.1",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tag": "^2.10.1",
+    "graphql-ws": "^5.5.5",
     "lodash": "^4.17.21",
     "mocha": "^6.2.2",
     "react": "^18.1.0",
@@ -40,14 +48,11 @@
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.8.3",
     "uniqid": "^5.1.0",
-    "@graphql-tools/schema": "^7.1.5",
-    "@types/ws": "^8.2.2",
-    "apollo-server-core": "3.6.2",
-    "apollo-server-express": "3.6.2",
-    "express": "^4.17.1",
-    "graphql": "^15.5.1",
-    "graphql-subscriptions": "^1.2.1",
-    "graphql-ws": "^5.5.5",
-    "ws": "^8.4.2"
+    "ws": "^8.4.2",
+    "tinkoff-sdk-grpc-js": "^1.8.0-fix",
+    "nice-grpc": "^2.1.7",
+    "debug": "^4.3.4"
+  },
+  "devDependencies": {
   }
 }
